--- a/_quarto-portugues.yml
+++ b/_quarto-portugues.yml
@@ -10,6 +10,8 @@ website:
     left:
       - text: "Cerimônia"
         href: cerimonia.qmd
+      - text: "Dicas"
+        href: dicas.qmd             
       # - text: "Confirmar presença"
       #   href: confirmar-presenca.qmd
       - text: "Galeria de fotos"
