página dos videos

--- a/_quarto-english.yml
+++ b/_quarto-english.yml
@@ -20,6 +20,8 @@ website:
         href: mural-mensagens.qmd
       - text: "Wedding gifts"
         href: presentes.qmd
+      - text: "Videos"
+        href: videos.qmd        
     right: 
       - href: https://beaeju.com.br/index.html
         text: Português
